test/files/neg/t11690.check
t11690.scala:11: warning: Unused import
  import X._
           ^
1 warning
error: No warnings can be incurred under -Werror.
